# LedLight

./: .gitignore
Arduino/: dtest.ino
Arduino/dtest/: dtest.ino
Arduino/lightTest/lightTest.ino/: blinktest.ino.ino
Arduino/neoLight/: neoLight.ino
LedLight/: Ambilight.cs  CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form2.resx  Form3.Designer.cs  Form3.cs  Form3.resx  Form4.Designer.cs  Form4.cs  LedLight.csproj  LedLight.sln  Manager.cs  Program.cs  ScreenCapture.cs  UsbConnect.cs  XMLParse.cs
LedLight/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
LedLight/include/: LedLight.h  ProfileManager.h  UsbConnect.h
LedLight/old/: LED.cs  LedLight.cs  MonoLight.cs  MultiLight.cs  MultiLightManager.cs  ProfileManager.cs
LedLight/src/: LedLight.cpp  ProfileManager.cpp  UsbConnect.cpp  main.cpp
